samples/_failures_safe/1761076641_8f0213_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_314447d3.c: In function ‘dfs’:
./samples/SAFE/__tmp_314447d3.c:180:11: error: expected ‘;’ at end of input
  180 |     printf
      |           ^
      |           ;
./samples/SAFE/__tmp_314447d3.c:180:5: error: expected declaration or statement at end of input
  180 |     printf
      |     ^~~~~~
